--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
+pytest = "^8.3.3"
 
 
 [tool.poetry.group.lint.dependencies]
@@ -15,6 +16,10 @@ isort = "^5.13.2"
 mypy = "^1.11.2"
 flake8 = "^7.1.1"
 
+
+
+[tool.poetry.group.dev.dependencies]
+pytest-cov = "^5.0.0"
 
 [build-system]
 requires = ["poetry-core"]
