--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 pytest = "^8.3.3"
+python-dotenv = "^1.0.1"
+requests = "^2.32.3"
+types-requests = "^2.32.0.20240914"
 
 
 [tool.poetry.group.lint.dependencies]
