--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ pytest = "^8.3.3"
 python-dotenv = "^1.0.1"
 requests = "^2.32.3"
 types-requests = "^2.32.0.20240914"
+pandas = "^2.2.3"
+openpyxl = "^3.1.5"
 
 
 [tool.poetry.group.lint.dependencies]
